--- a/.github/workflows/mkdocs.yml
+++ b/.github/workflows/mkdocs.yml
@@ -14,8 +14,8 @@ jobs:
     steps: 
       - name: Checkout Master 
         uses: actions/checkout@v2 
-      - name: Set up Python 3.7 
-        uses: actions/setup-python@v2 
+      - name: Set up Python
+        uses: actions/setup-python@v5 
         with: 
           python-version: '3.x' 
       - name: Install dependencies 
