--- a/.github/workflows/mkdocs.yml
+++ b/.github/workflows/mkdocs.yml
@@ -22,6 +22,8 @@ jobs:
         run: | 
           python -m pip install --upgrade pip 
           pip install mkdocs-material 
+          pip install mkdocs-git-revision-date-localized-plugin
+          pip install mkdocs-git-committers-plugin-2
       - name: Deploy 
         run: | 
           mkdocs gh-deploy --config-file Documentation/mkdocs.yml --remote-branch gh-pages --force
