--- a/.github/workflows/mkdocs.yml
+++ b/.github/workflows/mkdocs.yml
@@ -24,6 +24,7 @@ jobs:
           pip install mkdocs-material 
           pip install mkdocs-git-revision-date-localized-plugin
           pip install mkdocs-git-committers-plugin-2
+          pip install mkdocs-git-authors-plugin
       - name: Deploy 
         run: | 
           mkdocs gh-deploy --config-file Documentation/mkdocs.yml --remote-branch gh-pages --force
